[workspace]
members = [
    ".",            # The main rblib library
    "tools/fbutil",
]
resolver = "2"


[workspace.package]
license = "MIT"
version = "1.0.0"
edition = "2024"
rust-version = "1.87"
repository = "https://github.com/flashbots/unichain-builder"
homepage = "https://github.com/flashbots/unichain-builder"
authors = ["Flashbots <info@flashbots.net>"]
exclude = [".github/"]

[package]
name = "unichain-builder"
description = "Next-Gen Optimism L2 Block Builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[features]
default = ["jemalloc"]
jemalloc = ["rblib/jemalloc"]
debug = ["tokio/full", "tokio/tracing", "dep:console-subscriber"]

[dependencies]
rblib = { git = "https://github.com/flashbots/rblib", rev = "9ad1b21e0d8c0274549dae51286f85af3ec252bf" }

futures = "0.3"
tokio = "1.46"
tokio-tungstenite = "0.27"
parking_lot = "0.12"
eyre = "0.6"
moka = "0.12"
tracing = "0.1"
clap = { version = "4.4", features = ["derive", "env", "string"] }
reqwest = "0.12.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
itertools = "0.14.0"

url = "2.5.2"
rand = "0.9"
derive_more = "2.0"
shellexpand = "3.1"
humantime = "2.2"
atomic-time = "0.1"

secp256k1 = "0.30"
jsonrpsee = "0.26.0"

alloy-json-rpc = "1.0.37"
alloy-serde = "1.0.37"


# reth dependencies
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }

# debug flag
console-subscriber = { version = "0.4", optional = true }
tracing-subscriber = "0.3.20"

[dev-dependencies]
rblib = { git = "https://github.com/flashbots/rblib", rev = "9ad1b21e0d8c0274549dae51286f85af3ec252bf", features = [
    "test-utils",
] }

dashmap = "6.1"
orx-concurrent-vec = "3.7.0"
itertools = "0.14"

[lints.rust]
type_alias_bounds = "allow"

[lints.clippy]
tabs_in_doc_comments = "allow"
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
