[workspace]
members = [
    ".",            # The main rblib library
    "tools/fbutil",
    "src/tests/framework/macros"
]
resolver = "2"


[workspace.package]
license = "MIT"
version = "0.0.1"
edition = "2024"
rust-version = "1.87"
repository = "https://github.com/flashbots/unichain-builder"
homepage = "https://github.com/flashbots/unichain-builder"
authors = ["Flashbots <info@flashbots.net>"]
exclude = [".github/"]

[workspace.dependencies]
rblib = { git = "https://github.com/flashbots/rblib", rev = "6911bba2c9d2db67b58eabc52bd62b9aef070d86" }

futures = "0.3"
tokio = "1.46"
tokio-tungstenite = "0.27"
parking_lot = "0.12"
eyre = "0.6"
moka = "0.12"
tracing = "0.1"
clap = { version = "4.4", features = ["derive", "env", "string"] }
reqwest = "0.12.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
itertools = "0.14.0"

url = "2.5.2"
rand = "0.9"
derive_more = "2.0"
shellexpand = "3.1"
humantime = "2.2"
atomic-time = "0.1"

secp256k1 = "0.30"
jsonrpsee = "0.26.0"
console-subscriber = "0.4"
tracing-subscriber = "0.3.20"
dashmap = "6.1"
orx-concurrent-vec = "3.7.0"
vergen = "9.0.6"
vergen-git2 = "1.0.7"

[package]
name = "unichain-builder"
description = "Next-Gen Optimism L2 Block Builder"
build = "build.rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[features]
default = ["jemalloc"]
jemalloc = ["rblib/jemalloc"]
debug = ["tokio/full", "tokio/tracing", "dep:console-subscriber"]

[dependencies]
rblib = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
parking_lot = { workspace = true }
eyre = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
itertools = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
derive_more = { workspace = true }
shellexpand = { workspace = true }
humantime = { workspace = true }
atomic-time = { workspace = true }
secp256k1 = { workspace = true }
jsonrpsee = { workspace = true }
console-subscriber = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
vergen = { workspace = true, features = ["build", "cargo", "emit_and_set"] }
vergen-git2.workspace = true

[dev-dependencies]
rblib = { workspace = true, features = ["test-utils"] }
macros = { path = "src/tests/framework/macros" }

dashmap = { workspace = true }
orx-concurrent-vec = { workspace = true }
itertools = { workspace = true }

[lints.rust]
type_alias_bounds = "allow"

[lints.clippy]
tabs_in_doc_comments = "allow"
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
