[package]
name = "fbutil"
description = "Flashblocks dev and troubleshooting utilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[dependencies]
unichain-builder = { path = "../.." }

futures = "0.3"
tokio = "1.46"
tokio-tungstenite = "0.27"
clap = { version = "4.4", features = ["derive", "env", "string"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
url = "2.5.2"
rand = "0.9"
humantime = "2.2"
alloy = { version = "1.0.25", features = ["full"] }
op-alloy = { version = "0.19", features = ["full"] }
human_format = "1.1.0"
color-eyre = "0.6"
chrono = "0.4.41"
colored = "3.0.0"
