[package]
name = "fbutil"
description = "Flashblocks dev and troubleshooting utilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[dependencies]
rollup-boost-types = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
humantime = { workspace = true }

# fbutil-specific dependencies
human_format = "1.1.0"
color-eyre = "0.6"
chrono = "0.4.41"
colored = "3.0.0"
